Bug 1537675 - Ensure reads in VPXDecoder.cpp happen in correct order. r=jya a=pascalc

Function arguments may not evaluate in order, as such, this ensures width is read
before height from VP9 streams.

Differential Revision: https://phabricator.services.mozilla.com/D24372